Fri May 19 17:09:51 UTC 2006  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/Service_Config_Test.cpp:

          Fixed a warning due to assignment of a string literal to a
          non-const variable.

Thu May 18 17:42:09 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * bin/diff-builds.pl:

          Contributing a little tool to find the difference in the failing
          tests between two dates, on the same build. Or between two
          builds, on a particular date. Thanks to Johnny Willemsen
          <jwillemsen@remedy.nl> for mining and hosting the data used by
          this script.

Thu May 18 17:33:57 UTC 2006  J.T. Conklin  <jtc@acorntoolworks.com>

        * configure.ac:
        * m4/config_h.m4:

          Changed feature test for socklen_t to #include <sys/types.h>
          before <sys/socket.h>.  Use cannonical AC_CHECK_TYPE and
          AC_DEFINE with a third argument instead of a AH_TEMPLATE for
          ACE_HAS_SOCKLEN_T.  Fixes configuration on OpenBSD.  Thanks to
          Vladimir Panov <gbr at voidland dot org> for reporting this bug.

Thu May 18 15:15:16 UTC 2006  Iliyan Jeliazkov  <iliyan@ociweb.com>

        * bin/tao_orb_tests.lst:

          Removed Limits from the list of ORB tests because it is now part
          of ACE.

        * tests/Service_Config_Test.cpp:

          Added functionality to test gestalt size limits.

Thu May 18 15:21:33 UTC 2006  Steve Huston  <shuston@riverace.com>

        * NEWS:
        * ace/Task.{h inl cpp}: Reverted the changes from:
          Fri Apr 14 15:53:21 UTC 2006  Steve Huston  <shuston@riverace.com>
          Tasks that delete themselves from within close() would invalidate
          the lock that ACE_Task held across the close() call and perform
          undefined and illegal actions on the deleted lock upon return.
          Bugzilla #2339 remains unresolved.

Wed May 17 20:31:11 UTC 2006 Roopa Pundaleeka <roopa@txcorp.com>

        * ace/DLL_Manager.cpp: